# qtquickdesigner-components

./: .gitignore  CMakeLists.txt  README.md  dependencies.yaml  sync.profile
src/imports/application/: CMakeLists.txt  quickstudioapplication.cpp  quickstudioapplication_p.h
src/imports/compat/Components/: ArcItem.qml  CMakeLists.txt  qmldir  studiocompatibilityqulcomponents.cpp
src/imports/compat/Components/designer/: ArcItemSpecifics.qml  CMakeLists.txt
src/imports/compat/Extras/: AnimatedSpriteDirectory.qml  CMakeLists.txt  ColorizedImage.qml  ItemBuffer.qml  QulPerf.qml  qmldir
src/imports/compat/Extras/designer/: AnimatedSpriteDirectorySpecifics.qml  (+2 more)
src/imports/compatibility/Layers/: CMakeLists.txt  plugins.qmltypes  qmldir
src/imports/components/: ArcArrow.qml  ArcItem.qml  BorderItem.qml  CMakeLists.txt  CommonItemDescriptions.qdocinc  EllipseItem.qml  FlipableItem.qml  GroupItem.qml  IsoItem.qml  PieItem.qml  RectangleItem.qml  RegularPolygonItem.qml  StarItem.qml  StraightArrow.qml  SvgPathItem.qml  TextItem.qml  TriangleItem.qml  components.pri  components.pro  qmldir  qtstudiocomponentsplugin.cpp
src/imports/components/designer/: ArcArrowSpecifics.qml  ArcItemSpecifics.qml  BevelSection.qml  BorderItemSpecifics.qml  BorderModeComboBox.qml  CMakeLists.txt  CapComboBox.qml  CornerRadiusSection.qml  DashPatternEditor.qml  EllipseItemSpecifics.qml  FlipableItemSpecifics.qml  GroupItemSpecifics.qml  IsoItemSpecifics.qml  PieItemSpecifics.qml  RectangleItemSpecifics.qml  RegularPolygonItemSpecifics.qml  StarItemSpecifics.qml  StraightArrowSpecifics.qml  StrokeDetailsSection.qml  SvgPathItemSpecifics.qml  TextItemSpecifics.qml  TriangleItemSpecifics.qml  components.metainfo  designer.pri
src/imports/components/doc/: qtquickdesignercomponents.qdocconf  qtquickstudiocomponents.qdocconf
src/imports/designeffects/: CMakeLists.txt  DesignBackgroundBlurPrivate.qml  DesignDropShadow.qml  DesignDropShadowPrivate.qml  DesignEffect.qml  DesignEffectPrivate.qml  DesignInnerShadow.qml  DesignInnerShadowPrivate.qml  DesignLayerBlurPrivate.qml  qmldir  qtstudiocomponentsplugin.cpp
src/imports/designeffects/designer/: CMakeLists.txt  DesignDropShadowSpecifics.qml  DesignEffectPane.qml  DesignEffectSpecifics.qml  DesignInnerShadowSpecifics.qml  designeffects.metainfo
src/imports/designeffects/shaders/: dropShadow.frag  dropShadowClip.frag  gaussianBlur.frag  innerShadow.frag  innerShadowClip.frag  opacityMask.frag
src/imports/effects_qt6/: BlendEffect.qml  BlendItem.qml  BrightnessContrastEffect.qml  BrightnessContrastItem.qml  CMakeLists.txt  ColorOverlayItem.qml  ColorizeEffect.qml  ColorizeItem.qml  DesaturationEffect.qml  DesaturationItem.qml  DirectionalBlurEffect.qml  DirectionalBlurItem.qml  DisplaceEffect.qml  DisplaceItem.qml  DropShadowEffect.qml  DropShadowItem.qml  FastBlurItem.qml  GammaAdjustEffect.qml  GammaAdjustItem.qml  GaussianBlurEffect.qml  GaussianBlurItem.qml  GlowEffect.qml  GlowItem.qml  HueSaturationEffect.qml  HueSaturationItem.qml  InnerShadowEffect.qml  InnerShadowItem.qml  LevelAdjustEffect.qml  LevelAdjustItem.qml  MaskItem.qml  MaskedBlurEffect.qml  MaskedBlurItem.qml  OpacityMaskEffect.qml  OpacityMaskItem.qml  RadialBlurEffect.qml  RadialBlurItem.qml  RecursiveBlurEffect.qml  RecursiveBlurItem.qml  RotationItem.qml  SaturationItem.qml  (+7 more)
src/imports/effects_qt6/designer/: BlendEffectSpecifics.qml  BrightnessContrastEffectSpecifics.qml  CMakeLists.txt  ColorOverlayEffectSpecifics.qml  ColorizeEffectSpecifics.qml  DirectionalBlurEffectSpecifics.qml  DisplaceEffectSpecifics.qml  DropShadowEffectSpecifics.qml  FastBlurEffectSpecifics.qml  GammaAdjustEffectSpecifics.qml  GaussianBlurEffectSpecifics.qml  HueSaturationEffectSpecifics.qml  InnerShadowEffectSpecifics.qml  LevelAdjustEffectSpecifics.qml  MaskedBlurEffectSpecifics.qml  RecursiveBlurEffectSpecifics.qml  ThresholdMaskEffectSpecifics.qml  ZoomBlurEffectSpecifics.qml  designer.pri  effects.metainfo
src/imports/flowview/: CMakeLists.txt  DefaultFlowEffect.qml  FlowActionArea.qml  FlowDecision.qml  FlowEffect.qml  FlowFadeEffect.qml  FlowItem.qml  FlowMoveEffect.qml  FlowPushEffect.qml  FlowPushLeftEffect.qml  FlowPushRightEffect.qml  FlowPushUpEffect.qml  FlowSlideDownEffect.qml  FlowSlideLeftEffect.qml  FlowSlideRightEffect.qml  FlowSlideUpEffect.qml  FlowState.qml  FlowTransition.qml  FlowView.qml  FlowWildcard.qml  SwipeInteraction.qml  flowview.pri  flowview.pro  qmldir  qtstudioflowviewplugin.cpp
src/imports/flowview/+DesignMode/: FlowItem.qml  FlowView.qml
src/imports/flowview/designer/: CMakeLists.txt  FlowActionAreaSpecifics.qml  FlowDecisionSpecifics.qml  FlowEffectSection.qml  FlowEffectSpecifics.qml  FlowFadeEffectSpecifics.qml  FlowItemSpecifics.qml  FlowMoveEffectSpecifics.qml  FlowPushEffectSpecifics.qml  FlowTransitionSpecifics.qml  FlowViewSpecifics.qml  FlowWildcardSpecifics.qml  plugin.metainfo
src/imports/logichelper/: AndOperator.qml  BidirectionalBinding.qml  BidrectionalBinding.qml  CMakeLists.txt  MinMaxMapper.qml  NotOperator.qml  OrOperator.qml  RangeMapper.qml  StringMapper.qml  logichelper.pri  logichelper.pro  logichelperplugin.cpp  qmldir
src/imports/logichelper/designer/: AndOperatorSpecifics.qml  BidirectionalBindingSpecifics.qml  CMakeLists.txt  MinMaxMapperSpecifics.qml  NotOperatorSpecifics.qml  OrOperatorSpecifics.qml  RangeMapperSpecifics.qml  StringMapperSpecifics.qml  designer.pri  plugin.metainfo
src/imports/logichelper/doc/: qtquickstudiologichelper.qdocconf
src/imports/multitext/: CMakeLists.txt  MultiTextElement.qml  MultiTextException.qml  MultiTextItem.qml  multitext.pri  multitext.pro  multitextplugin.cpp  qmldir
src/imports/multitext/designer/: CMakeLists.txt  MultiTextElementSpecifics.qml  MultiTextExceptionSpecifics.qml  MultiTextItemSpecifics.qml  designer.pri  plugin.metainfo
src/imports/utils/: CMakeLists.txt  ChildListModel.qml  JSONBackend.qml  JSONListModel.qml  JsonBackend.qml  JsonListModel.qml  quickstudiocsvtablemodel.cpp  quickstudiocsvtablemodel_p.h  quickstudiofilereader.cpp  quickstudiofilereader_p.h
(+254 files in other folders)
